# slog

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/file2slog/: CMakeLists.txt  main.c
apps/slog2file/: CMakeLists.txt
apps/validator/: CMakeLists.txt  main.c
arduino/: README.adoc  keywords.txt  library.properties
arduino/examples/slog_serial_example/: slog_serial_example.ino
lib/: CMakeLists.txt
lib/include/: block.h  config.h  getline.h  key.h  mac.h  slog.h  slog_config.h
lib/src/: block.c  getline.c  key.c  mac.c  slog.c
